# crypto-price-tracker

./: Cargo.toml
src/: main.rs
src/tracker/: base.rs  binance.rs  mod.rs
